--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     username: root
     password: 12345678
-    url: jdbc:mysql://localhost:3306/weight_manager?useSSL=false
+    url: jdbc:mysql://localhost:3306/weight_manager?useSSL=false&rewriteBatchedStatements=true
   session:
     store-type: redis
   redis:
