--- a/prometheus-demo/src/main/resources/application.yml
+++ b/prometheus-demo/src/main/resources/application.yml
@@ -4,3 +4,18 @@ spring:
 
 server:
   port: 8080
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    tags:
+      application: ${spring.application.name}
