--- a/prometheus-demo/src/main/resources/application.yml
+++ b/prometheus-demo/src/main/resources/application.yml
@@ -7,11 +7,19 @@ server:
 
 management:
   endpoints:
+    enabled-by-default: false
     web:
       exposure:
-        include: '*'
+        include: health,info,prometheus,metrics
   endpoint:
     prometheus:
+      enabled: true
+    health:
+      enabled: true
+      show-details: always
+    info:
+      enabled: true
+    metrics:
       enabled: true
   metrics:
     export:
