--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
     <modules>
         <module>spring-session</module>
         <module>prometheus-demo</module>
+        <module>spring-security-demo</module>
     </modules>
 
 
