--- a/prometheus-demo/src/main/resources/application.yml
+++ b/prometheus-demo/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: prometheus-demo
+  web:
+    resources:
+      static-locations:
+        - classpath:/META-INF/resources/
+        - classpath:/resources/
+        - classpath:/static/
+        - classpath:/public/
+  mvc:
+    static-path-pattern: /static/**
 
 server:
   port: 8080
