--- a/spring-security-demo/src/main/resources/application.yml
+++ b/spring-security-demo/src/main/resources/application.yml
@@ -1,6 +1,22 @@
+server:
+  port: 8080
+
 spring:
   application:
     name: spring-security-demo
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 12345678
+    url: jdbc:mysql://localhost:3306/security_admin?useSSL=false&rewriteBatchedStatements=true
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 20
 
-server:
-  port: 8080
+
+
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:/mapper/**/*.xml
