--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -67,6 +67,15 @@
             <artifactId>jjwt</artifactId>
             <version>0.12.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+            <version>2.11.1</version>
+        </dependency>
     </dependencies>
 
     <build>
