--- a/spring-security-demo/src/main/resources/application.yml
+++ b/spring-security-demo/src/main/resources/application.yml
@@ -12,7 +12,15 @@ spring:
     hikari:
       maximum-pool-size: 20
       minimum-idle: 20
-
+  redis:
+    host: localhost
+    port: 6379
+    client-type: lettuce
+    lettuce:
+      pool:
+        enabled: true
+        max-active: 10
+        min-idle: 5
 
 
 mybatis-plus:
