--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>prometheus-demo</module>
         <module>spring-security-demo</module>
         <module>api-common</module>
+        <module>security-data-common</module>
     </modules>
 
 
