--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -44,11 +44,6 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>3.14.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
         </dependency>
@@ -58,13 +53,8 @@
             <version>0.12.5</version>
         </dependency>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>2.11.1</version>
+            <groupId>com.dingyabin</groupId>
+            <artifactId>redis-helper-starter</artifactId>
         </dependency>
         <dependency>
             <groupId>com.dingyabin</groupId>
