--- a/spring-security-demo/src/main/resources/application.yml
+++ b/spring-security-demo/src/main/resources/application.yml
@@ -4,7 +4,17 @@ server:
 spring:
   application:
     name: spring-security-demo
-
+#数据库配置
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/security_admin?useSSL=false&rewriteBatchedStatements=true
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      maximum-pool-size: 20
+      minimum-idle: 20
+      username: root
+      password: 12345678
+#redis配置
   redis:
     host: localhost
     port: 6379
@@ -14,3 +24,9 @@ spring:
         enabled: true
         max-active: 10
         min-idle: 5
+
+mybatis-plus:
+  configuration:
+    map-underscore-to-camel-case: true
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+  mapper-locations: classpath*:/mapper/**/*.xml
