--- a/spring-cache-demo/src/main/resources/application.yml
+++ b/spring-cache-demo/src/main/resources/application.yml
@@ -5,6 +5,18 @@ spring:
   application:
     name: spring-cache-demo
 
+#redis
+  redis:
+    host: localhost
+    port: 6379
+    client-type: lettuce
+    lettuce:
+      pool:
+        enabled: true
+        max-active: 20
+        min-idle: 5
+
+#cache
 cache:
   caffeine:
     defaultMaxSize: 50
