--- a/distributed-lock-tool/pom.xml
+++ b/distributed-lock-tool/pom.xml
@@ -27,13 +27,29 @@
             <artifactId>api-common</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.dingyabin</groupId>
-            <artifactId>redis-helper-starter</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.baomidou</groupId>
-            <artifactId>lock4j-redis-template-spring-boot-starter</artifactId>
+            <artifactId>lock4j-redisson-spring-boot-starter</artifactId>
             <version>2.2.7</version>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.redisson</groupId>-->
+<!--            <artifactId>redisson-spring-boot-starter</artifactId>-->
+<!--            <version>3.19.0</version>-->
+<!--            <exclusions>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-starter-actuator</artifactId>-->
+<!--                </exclusion>-->
+<!--                <exclusion>-->
+<!--                    <groupId>org.springframework.boot</groupId>-->
+<!--                    <artifactId>spring-boot-starter-web</artifactId>-->
+<!--                </exclusion>-->
+<!--            </exclusions>-->
+<!--        </dependency>-->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.19.0</version>
         </dependency>
     </dependencies>
 
