--- a/distributed-ids-tool/src/main/resources/application.yml
+++ b/distributed-ids-tool/src/main/resources/application.yml
@@ -20,3 +20,8 @@ mybatis-plus:
     map-underscore-to-camel-case: true
 #    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:/mapper/**/*.xml
+
+
+logging:
+  pattern:
+    console: '%d{yyyy-MM-dd HH:mm:ss}-[%X{traceId}]-[%thread]-[%level] - %logger{10} - %msg%n'
