--- a/spring-web-common/pom.xml
+++ b/spring-web-common/pom.xml
@@ -31,6 +31,11 @@
             <artifactId>commons-io</artifactId>
             <version>2.11.0</version>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-extra</artifactId>
+            <version>5.8.19</version>
+        </dependency>
     </dependencies>
 
 </project>
