--- a/spring-data-sharding/src/main/resources/application.yml
+++ b/spring-data-sharding/src/main/resources/application.yml
@@ -4,7 +4,7 @@ server:
 spring:
   application:
     name: spring-data-sharding
-#数据库配置
+  #数据库配置
   shardingsphere:
     # 数据源配置
     datasource:
@@ -27,59 +27,35 @@ spring:
         username: root
         password: 12345678
     # 分片规则配置
-    rules:
-      sharding:
-        default-database-strategy:
-          standard:
-            sharding-algorithm-name: defaultDataBaseSelect
-        # 分片算法配置
-        sharding-algorithms:
-          database-inline:
-            # 分片算法类型
-            type: INLINE
-            props:
+    sharding:
+      default-data-source-name: db1
+      tables:
+        # 逻辑表名称
+        order:
+          # 行表达式标识符可以使用 ${...} 或 $->{...}，但前者与 Spring 本身的属性文件占位符冲突，因此在 Spring 环境中使用行表达式标识符建议使用 $->{...}
+          actual-data-nodes: db$->{0..1}.order_$->{0..1}
+          # 分库策略
+          database-strategy:
+            inline:
+              # 分片列名称
+              sharding-column: cusid
               # 分片算法的行表达式（算法自行定义，此处为方便演示效果）
               algorithm-expression: db$->{cusid % 2}
-          table-inline:
-            # 分片算法类型
-            type: INLINE
-            props:
-              # 分片算法的行表达式
+          # 分表策略
+          table-strategy:
+            inline:
+              # 分片列名称
+              sharding-column: cusid
+              # 分片算法名称
               algorithm-expression: order_$->{cusid % 2}
-          defaultDataBaseSelect:
-            # 分片算法类型
-            type: INLINE
-            props:
-              # 分片算法的行表达式
-              algorithm-expression: db0
-        tables:
-          # 逻辑表名称
-          order:
-            # 行表达式标识符可以使用 ${...} 或 $->{...}，但前者与 Spring 本身的属性文件占位符冲突，因此在 Spring 环境中使用行表达式标识符建议使用 $->{...}
-            actual-data-nodes: db$->{0..1}.order_$->{0..1}
-            # 分库策略
-            database-strategy:
-              standard:
-                # 分片列名称
-                sharding-column: cusid
-                # 分片算法名称
-                sharding-algorithm-name: database-inline
-            # 分表策略
-            table-strategy:
-              standard:
-                # 分片列名称
-                sharding-column: cusid
-                # 分片算法名称
-                sharding-algorithm-name: table-inline
     # 属性配置
     props:
       # 展示修改以后的sql语句
-      sql-show: true
-      #用于设置任务处理线程池的大小
-      #每个 ShardingSphereDataSource 使用一个独立的线程池，同一个 JVM 的不同数据源不共享线程池, 默认无限制
-      #kernel-executor-size:
-      #一次查询请求在每个数据库实例中所能使用的最大连接数, 默认=1
-      max-connections-size-per-query: 1
+      sql:
+        show: true
+      #工作线程数量，默认值: CPU核数
+      executor:
+        size: 30
 #https://blog.csdn.net/weixin_42055932/article/details/138000206
 #https://blog.csdn.net/qq_46416934/article/details/123427460
 
