--- a/spring-data-sharding/src/main/resources/application.yml
+++ b/spring-data-sharding/src/main/resources/application.yml
@@ -48,6 +48,19 @@ spring:
               sharding-column: cusid
               # 分片算法名称
               algorithm-expression: order_$->{cusid % 2}
+        # 逻辑表名称
+        number:
+          # 行表达式标识符可以使用 ${...} 或 $->{...}，但前者与 Spring 本身的属性文件占位符冲突，因此在 Spring 环境中使用行表达式标识符建议使用 $->{...}
+          actual-data-nodes: db1.number_$->{0..1}
+          # 分表策略
+          table-strategy:
+            standard:
+              # 分片列名称
+              sharding-column: num
+              # 分片算法名称
+              preciseAlgorithmClassName: com.dingyabin.sharding.config.algorithm.CustomerIdShardingAlgorithm
+              rangeAlgorithmClassName: com.dingyabin.sharding.config.algorithm.CustomerIdShardingAlgorithm
+
     # 属性配置
     props:
       # 展示修改以后的sql语句
@@ -65,3 +78,4 @@ mybatis-plus:
     map-underscore-to-camel-case: true
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:/mapper/**/*.xml
+  type-handlers-package: com.dingyabin.sharding.config.typehandler
