--- a/spring-resilience4j-demo/src/main/resources/application.yml
+++ b/spring-resilience4j-demo/src/main/resources/application.yml
@@ -16,7 +16,7 @@ resilience4j.ratelimiter:
       registerHealthIndicator: false
       eventConsumerBufferSize: 100
       writableStackTraceEnabled: false
-      allowHealthIndicatorToFail:
+      allowHealthIndicatorToFail: false
       subscribeForEvents: false
   instances:
     controllerA:
@@ -55,26 +55,31 @@ resilience4j.ratelimiter:
 #      eventConsumerBufferSize: 10
 #      recordFailurePredicate: io.github.robwin.exception.RecordFailurePredicate
 #
-#resilience4j.retry:
-#  instances:
-#    backendA:
-#      maxAttempts: 3
-#      waitDuration: 10s
-#      enableExponentialBackoff: true
-#      exponentialBackoffMultiplier: 2
-#      retryExceptions:
-#        - org.springframework.web.client.HttpServerErrorException
-#        - java.io.IOException
-#      ignoreExceptions:
-#        - io.github.robwin.exception.BusinessException
-#    backendB:
-#      maxAttempts: 3
-#      waitDuration: 10s
-#      retryExceptions:
-#        - org.springframework.web.client.HttpServerErrorException
-#        - java.io.IOException
-#      ignoreExceptions:
-#        - io.github.robwin.exception.BusinessException
+resilience4j.retry:
+  configs:
+    default:
+      maxAttempts: 3
+      waitDuration: 3s
+      enableExponentialBackoff: true
+      exponentialBackoffMultiplier: 2
+  instances:
+    serviceA:
+      baseConfig: default
+      maxAttempts: 3
+      waitDuration: 1s
+      retryExceptions:
+        - org.springframework.web.client.HttpServerErrorException
+        - java.lang.RuntimeException
+      ignoreExceptions:
+        - java.io.IOException
+    serviceB:
+      baseConfig: default
+      retryExceptions:
+        - java.lang.RuntimeException
+        - org.springframework.web.client.HttpServerErrorException
+        - java.io.IOException
+      ignoreExceptions:
+        - java.io.IOException
 #
 #resilience4j.bulkhead:
 #  instances:
