--- a/spring-resilience4j-demo/src/main/resources/application.yml
+++ b/spring-resilience4j-demo/src/main/resources/application.yml
@@ -9,7 +9,7 @@ web:
   common:
     config:
       printHeader: false
-      logTracePrefix: 'SPRING-RESILIENCE4J-DEMO收到HTTP请求,'
+      logTracePrefix:  ${spring.application.name}收到HTTP请求,
 
 #https://resilience4j.readme.io/v2.1.0/docs/getting-started
 
