--- a/spring-security-demo/pom.xml
+++ b/spring-security-demo/pom.xml
@@ -29,12 +29,8 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>cn.hutool</groupId>
-            <artifactId>hutool-extra</artifactId>
-        </dependency>
-        <dependency>
             <groupId>com.dingyabin</groupId>
-            <artifactId>api-common</artifactId>
+            <artifactId>spring-web-common</artifactId>
         </dependency>
         <dependency>
             <groupId>com.alibaba</groupId>
