--- a/spring-scheduler-demo/src/main/resources/application.yml
+++ b/spring-scheduler-demo/src/main/resources/application.yml
@@ -25,5 +25,5 @@ spring:
 mybatis-plus:
   configuration:
     map-underscore-to-camel-case: true
-#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   mapper-locations: classpath:/mapper/**/*.xml
