--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
                 <artifactId>spring-web-common</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>com.dingyabin</groupId>
+                <artifactId>common-utils</artifactId>
+                <version>0.0.1-SNAPSHOT</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
