--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <properties>
         <revision>0.0.1-SNAPSHOT</revision>
         <java.version>1.8</java.version>
+        <mysql.version>8.0.33</mysql.version>
     </properties>
 
 
@@ -78,6 +79,11 @@
                 <groupId>com.dingyabin</groupId>
                 <artifactId>common-utils</artifactId>
                 <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>mysql</groupId>
+                <artifactId>mysql-connector-java</artifactId>
+                <version>${mysql.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
