--- a/spring-data-sharding/src/main/resources/application-v5.2.1.yml
+++ b/spring-data-sharding/src/main/resources/application-v5.2.1.yml
@@ -12,7 +12,7 @@ spring:
       names: db0,db1
       db0:
         type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         jdbcUrl: jdbc:mysql://localhost:3306/sys_common?useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
         maximum-pool-size: 20
         minimum-idle: 10
@@ -20,7 +20,7 @@ spring:
         password: 12345678
       db1:
         type: com.zaxxer.hikari.HikariDataSource
-        driver-class-name: com.mysql.jdbc.Driver
+        driver-class-name: com.mysql.cj.jdbc.Driver
         jdbcUrl: jdbc:mysql://localhost:3306/weight_manager?useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai&useUnicode=true&characterEncoding=UTF-8
         maximum-pool-size: 20
         minimum-idle: 10
