--- a/spring-scheduler-demo/src/main/resources/application.yml
+++ b/spring-scheduler-demo/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
 
   #数据库配置
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/sys_common?useSSL=false&rewriteBatchedStatements=true&serverTimezone=Asia/Shanghai
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
