--- a/spring-security-demo/src/main/resources/application.yml
+++ b/spring-security-demo/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
     name: spring-security-demo
 #数据库配置
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/security_admin?useSSL=false&rewriteBatchedStatements=true
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
