--- a/spring-session/src/main/resources/application-dev.yml
+++ b/spring-session/src/main/resources/application-dev.yml
@@ -4,7 +4,7 @@ server:
 
 spring:
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: 12345678
     url: jdbc:mysql://localhost:3306/weight_manager?useSSL=false&rewriteBatchedStatements=true
