--- a/prometheus-demo/pom.xml
+++ b/prometheus-demo/pom.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>com.dingyabin</groupId>
         <artifactId>spring-boot-practice</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <version>${unified.version}</version>
     </parent>
 
+    <modelVersion>4.0.0</modelVersion>
+
     <artifactId>prometheus-demo</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+
 
     <name>prometheus-demo</name>
 
