--- a/common-utils/pom.xml
+++ b/common-utils/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>com.dingyabin</groupId>
         <artifactId>spring-boot-practice</artifactId>
-        <version>${unified.version}</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
