--- a/prometheus-demo/pom.xml
+++ b/prometheus-demo/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>com.dingyabin</groupId>
         <artifactId>spring-boot-practice</artifactId>
-        <version>${unified.version}</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
