--- a/spring-web-common/pom.xml
+++ b/spring-web-common/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>spring-boot-practice</artifactId>
         <groupId>com.dingyabin</groupId>
-        <version>${unified.version}</version>
+        <version>${revision}</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
